[package]
name = "cookie"
version = "0.18.1"
authors = ["Sergio Benitez <sb@sergio.bz>", "Alex Crichton <alex@alexcrichton.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SergioBenitez/cookie-rs"
documentation = "https://docs.rs/cookie"
readme = "README.md"
build = "build.rs"
description = """
HTTP cookie parsing and cookie jar management. Supports signed and private
(encrypted, authenticated) jars.
"""

[features]
percent-encode = ["dep:percent-encoding"]
secure = ["private", "signed", "key-expansion"]
private = ["dep:aes-gcm", "dep:base64", "dep:rand", "dep:subtle"]
signed = ["dep:hmac", "dep:sha2", "dep:base64", "dep:rand", "dep:subtle"]
key-expansion = ["dep:sha2", "dep:hkdf"]

[dependencies]
time = { version = "0.3", default-features = false, features = ["std", "parsing", "formatting", "macros"] }
percent-encoding = { version = "2.0", optional = true }

# dependencies for secure (private/signed) functionality
aes-gcm = { version = "0.10.0", optional = true }
hmac = { version = "0.12.0", optional = true }
sha2 = { version = "0.10.0", optional = true }
base64 = { version = "0.22", optional = true }
rand = { version = "0.8", optional = true }
hkdf = { version = "0.12.0", optional = true }
subtle = { version = "2.3", optional = true }

[build-dependencies]
version_check = "0.9.4"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(nightly)'] }

[package.metadata.docs.rs]
all-features = true
