[package]
name = "cookie"
version = "0.18.1"
authors = ["Sergio Benitez <sb@sergio.bz>", "Alex Crichton <alex@alexcrichton.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rwf2/cookie-rs"
readme = "README.md"
description = """
HTTP cookie parsing and cookie jar management. Supports signed and private
(encrypted, authenticated) jars.
"""

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }

[features]
percent-encode = ["dep:percent-encoding"]
secure = ["private", "signed", "key-expansion"]
private = ["dep:aes-gcm", "dep:base64", "dep:rand", "dep:subtle"]
signed = ["dep:hmac", "dep:sha2", "dep:base64", "dep:rand", "dep:subtle"]
key-expansion = ["dep:sha2", "dep:hkdf"]

[dependencies]
time = { version = "0.3.45", default-features = false, features = ["std", "parsing", "formatting", "macros"] }
percent-encoding = { version = "2.0", optional = true }

# dependencies for secure (private/signed) functionality
aes-gcm = { version = "0.10", optional = true }
hmac = { version = "0.13", optional = true }
sha2 = { version = "0.11", optional = true }
base64 = { version = "0.22", optional = true }
rand = { version = "0.10", optional = true }
hkdf = { version = "0.13", optional = true }
subtle = { version = "2.3", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "nightly"]
